Expanded amount of characters from 6000 to 21000 (hopefully it's not too much for React) + small fix for the navbar dropdown

--- a/src/index.css
+++ b/src/index.css
@@ -85,7 +85,7 @@ code {
     height: 12vh;
   }
   #title {
-    font-size: 30px;
+    font-size: 20px;
     margin-top: 0.5em;
   }
   #nav-links {
